# maillist

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README-zh.md  README.md  data.db  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: ci.yml  docker.yml  release.yml
config/: default.toml
docs/: DEPLOYMENT.md  manual-test-plan.md
docs/zh/: DEPLOYMENT.md  test-coverage-plan.md  test-coverage-report.md  需求计划.md
migration/: Cargo.toml
migration/src/: lib.rs  m20250101_000001_create_domain_table.rs  m20250101_000002_create_mailing_list_table.rs  m20250101_000003_create_user_table.rs  m20250101_000004_create_subscriber_table.rs  m20250101_000005_create_email_message_table.rs  m20250101_000006_create_moderation_queue_table.rs  m20250101_000007_create_list_membership_table.rs  m20250101_000008_create_totp_credential_table.rs  m20250101_000009_create_passkey_credential_table.rs  m20250101_000010_create_auth_session_table.rs  m20250101_000011_create_refresh_token_table.rs  m20250101_000012_create_sender_policy_table.rs  m20250101_000013_create_attachment_table.rs  m20250101_000014_create_email_template_table.rs  m20250101_000015_create_bounce_log_table.rs  m20250101_000016_seed_email_templates.rs  m20250101_000017_add_domain_dns_fields.rs
src/: config.rs  lib.rs  main.rs
src/ai/: aliyun_signer.rs  client.rs  mod.rs  parser.rs  policy.rs
src/api/: mod.rs
src/models/: attachment.rs  auth_session.rs  bounce_log.rs  domain.rs  email_message.rs  email_template.rs  list_membership.rs  mailing_list.rs  mod.rs  moderation_queue.rs  passkey_credential.rs  prelude.rs  refresh_token.rs  sender_policy.rs  subscriber.rs  totp_credential.rs  user.rs
src/services/: ai_service.rs  archive_service.rs  auth_service.rs  dkim_service.rs  dns_check_service.rs  domain_service.rs  list_service.rs  mail_service.rs  mfa_service.rs  mod.rs  moderation_service.rs  notification_service.rs  (+3 more)
tests/: api_admin_api_test.rs  api_auth_api_test.rs  api_domains_api_test.rs  api_health_api_test.rs  api_lists_api_test.rs  api_moderation_api_test.rs  api_passkey_api_test.rs  api_templates_api_test.rs  api_users_api_test.rs  auth_test.rs  domain_test.rs  integration_ai_service_test.rs  integration_archive_service_test.rs  integration_auth_service_test.rs  integration_bounce_task_test.rs  integration_digest_task_test.rs  integration_domain_service_test.rs  integration_list_service_test.rs  integration_mfa_service_test.rs  integration_moderation_service_test.rs  integration_notification_service_test.rs  integration_passkey_service_test.rs  integration_smtp_e2e_test.rs  integration_smtp_processor_test.rs  integration_subscriber_service_test.rs  integration_template_service_test.rs  integration_test.rs  tasks_test.rs  tera_debug.rs  unit_ai_test.rs  unit_smtp_auth_check_test.rs  unit_smtp_unit_test.rs  utils_test.rs
(+33 files in other folders)
