[package]
name = "oak-maillist"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace]
members = [".", "migration"]

[dependencies]
# --- Runtime & Async ---
tokio = { version = "1.44", features = ["full"] }

# --- Web Framework ---
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }
hyper = { version = "1.6", features = ["full"] }

# --- Database ---
sea-orm = { version = "1.1", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid"] }

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Configuration ---
config = "0.15"
toml = "0.8"

# --- Authentication & Security ---
jsonwebtoken = "9.3"
argon2 = { version = "0.5", features = ["password-hash"] }
rand = "0.9"

# --- WebAuthn / Passkey ---
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "danger-credential-internals"] }

# --- TOTP ---
totp-rs = { version = "5.6", features = ["qr"] }

# --- Crypto ---
ring = "0.17"
hmac = "0.12"
sha2 = "0.10"

# --- Email ---
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
mailparse = "0.15"

# --- Template ---
tera = { version = "1.20", default-features = false }

# --- Validation ---
validator = { version = "0.20", features = ["derive"] }

# --- Logging & Tracing ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# --- Metrics ---
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# --- Time & Date ---
chrono = { version = "0.4", features = ["serde"] }

# --- UUID ---
uuid = { version = "1.16", features = ["v4", "serde"] }

# --- HTTP Client (for AI API calls) ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# --- Error Handling ---
thiserror = "2.0"
anyhow = "1.0"

# --- Utilities ---
once_cell = "1.21"
regex = "1.11"
lazy_static = "1.5"

# --- SeaORM Migration (runtime dependency) ---
migration = { path = "migration" }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
webauthn-rs-proto = "0.5"
